<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="button_popular_movies">Popular Movies</string>
    <string name="button_stock_hawk">Stock Hawk</string>
    <string name="button_build_it_bigger">Build it bigger</string>
    <string name="button_material_app">Make your app material</string>
    <string name="button_ubiq">Go ubiquitous</string>
    <string name="button_capstone">Capstone</string>
    <string name="title">My Nanodegree Apps</string>
</resources>
