<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="kodefoundry.com.myappportfolio.MainActivity">

    <TextView android:layout_width="match_parent"
              android:text="@string/title"
              android:gravity="center"
              android:textSize="20sp"
              android:textColor="@color/black"
              android:layout_height="wrap_content" />

    <Button
            android:layout_marginTop="@dimen/button_top_margin"
            android:background="@color/udacity"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_popular_movies"
            android:gravity="center"
            android:id="@+id/btn_popular_movies"
            android:onClick="onButtonClick"
    />

    <Button
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_stock_hawk"
            android:background="@color/udacity"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/btn_stock_hawk"
            android:onClick="onButtonClick"
    />

    <Button
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_build_it_bigger"
            android:gravity="center"
            android:background="@color/udacity"
            android:textColor="@color/white"
            android:id="@+id/btn_build_it_bigger"
            android:onClick="onButtonClick"
    />

    <Button
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/udacity"
            android:textColor="@color/white"
            android:text="@string/button_material_app"
            android:gravity="center"
            android:id="@+id/btn_material"
            android:onClick="onButtonClick"
    />

    <Button
            android:layout_marginTop="@dimen/button_top_margin"
            android:background="@color/udacity"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_ubiq"
            android:gravity="center"
            android:id="@+id/btn_go_ubiquitous"
            android:onClick="onButtonClick"
    />

    <Button
            android:layout_marginTop="@dimen/button_top_margin"
            android:background="@color/udacity"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_capstone"
            android:gravity="center"
            android:id="@+id/btn_capstone"
            android:onClick="onButtonClick"
    />

</LinearLayout>
